feature/9/bug_fix | добавил доки по руччкам сваггер
